# dd-wasm-js-rewriter

./: .eslintignore  .gitignore  .gitlab-ci.yml  CODEOWNERS  Cargo.toml  LICENSE-3rdparty.csv  index.d.ts  main.js  package-lock.json  package.json  rust-toolchain.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-wasm.yml  codeql-analysis.yml  release.yml
.gitlab/: benchmarks.yml
benchmark/sirun/: Dockerfile  Readme.md  get-variants.js  results.ndjson  run-one-variant.js  run-util.js  runall.sh  squash-affinity.js  strip-unwanted-results.js
benchmark/sirun/initialize/: init.js  meta.json
benchmark/sirun/rewrite/: client.js  common.js  meta.json  nohup.out  orchestrion.yml  rewrite.js  server.js
integration-test/: init-rewriter.js  setup.js  stack-traces.spec.js
integration-test/requires/: error-typescript-append.js  error-typescript-append.js.map  error-typescript-append.ts  error-typescript-simple.js  error-typescript-simple.js.map  error-typescript-simple.ts  error-typescript.js  error-typescript.js.map  error-typescript.ts
js/module-details/: index.js
js/source-map/: index.js
js/stack-trace/: index.js
scripts/: crawler.js
src/: lib_wasm.rs  rewriter.rs  util.rs
src/tests/: binary_expression_test.rs  error_tracking_tests.rs  literal_test.rs  mod.rs  orchestrion_test.rs  pass_interactions_tests.rs  source_map_test.rs  string_method_test.rs
src/transform/: call_expr_transform.rs  mod.rs  opt_chain_transform.rs  transform_status.rs
src/transform/errortracking/: catch_clause_body_transform.rs  catch_clause_pat_transform.rs  catch_member_transform.rs  mod.rs
src/transform/iast/: arrow_transform.rs  assign_add_transform.rs  binary_add_transform.rs  call_expr_transform.rs  function_prototype_transform.rs  mod.rs  operand_handler.rs  opt_chain_transform.rs  template_transform.rs
src/visitor/: block_transform_utils.rs  ident_provider.rs  mod.rs  visitor_util.rs
src/visitor/errortracking/: errortracking_block_transform_visitor.rs  mod.rs
src/visitor/iast/: csi_methods.rs  ident_provider.rs  literal_visitor.rs  mod.rs  operation_transform_visitor.rs  taint_block_transform_visitor.rs
test/: binary_expression.spec.js  errortracking.spec.js  initialization-prefix.spec.js  literals.spec.js  main.spec.js  method_without_callee.spec.js  optional_chaining.spec.js  orchestrion.spec.js  rewriter_config.spec.js  stack_trace.spec.js  string_method.spec.js  template_literal.spec.js  tracer_logger.spec.js  util.js
wasm/: package.json  wasm_js_rewriter.d.ts  wasm_js_rewriter.js  wasm_js_rewriter_bg.wasm  wasm_js_rewriter_bg.wasm.d.ts
wasm/snippets/wasm-js-rewriter-2c9c3973b2049298/: tracer_logger.js
