[package]
edition = "2021"
name = "wasm-js-rewriter"
version = "3.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
swc = "16.1.0"
swc_common = "8.0.0"
swc_ecma_ast = "8.0.0"
swc_ecma_visit = "8.0.0"
swc_ecma_parser = "10.0.0"
anyhow = "1.0.81"
fastrand = { version = "2.1.0", features = ["js"] }
instant = "0.1"
base64 = "0.21.0"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.63"
log = {version = "0.4", features = ["std"] }
orchestrion-js = { git = "https://github.com/Datadog/orchestrion-js", branch = "main" }
regex = "1.11.1"

[dev-dependencies]
tempfile = "3.3.0"
speculoos = "0.11.0"
ctor = "0.1.23"

[profile.release]
lto = true
opt-level = 's'
codegen-units = 1

[features]
default = ["instant/wasm-bindgen", "instant/inaccurate"]
