[package]
edition = "2021"
name = "wasm-js-rewriter"
version = "4.0.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
swc = "33"
swc_core = { version = "34", features = ["ecma_plugin_transform","ecma_quote"] }
swc_common = "14"
swc_ecma_ast = "14"
swc_ecma_visit = { version = "14", features = ["path"] }
swc_ecma_parser = "22"
anyhow = "1.0.81"
fastrand = { version = "2.1.0", features = ["js"] }
instant = "0.1"
base64 = "0.21.0"
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.4"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.63"
log = {version = "0.4", features = ["std"] }
orchestrion-js = { git = "https://github.com/sabrenner/orchestrion-js", branch = "sabrenner/update-deps", features = ["serde"] }
regex = "1.11.1"
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
tempfile = "3.3.0"
speculoos = "0.11.0"
ctor = "0.1.23"
serde_yaml = "0.9"

[profile.release]
lto = true
opt-level = 's'
codegen-units = 1

[features]
default = ["instant/wasm-bindgen", "instant/inaccurate"]
